@@ -6,6 +6,9 @@ Changes in version 0.21
 
 STILL UNDER DEVELOPMENT; NOT RELEASED YET.
 
+* Restored the atf(7) manual page to serve as a reference to all the other
+  manual pages shipped by ATF.
+
 * Issue #5: Recommend the (expected, actual) idiom for calls to the test
   macros in the manual pages.
 
